# thm

./: .gitignore  Cargo.toml  Makefile  README.md  generate_ops.sh
examples/: main.t
src/: CMakeLists.txt  main.rs  opcodes.rs  vm.rs
src/asm/: address_resolver.rs  checker.rs  constants.rs  emitter.rs  lexer.rs  main.rs  parser.rs
src/c-vm/: CMakeLists.txt  build.sh  bus.c  bus.h  bus_test.c  cpu.c  cpu.h  cpu_internal.h  cpu_test.c  init.sh  json.c  json.h  main.c  memory.c  memory.h  memory_test.c  ops.c  ops.h  opts.c  opts.h  test.sh  video.c  video.h  vmarch.c  vmarch.h
src/c-vm/cmake/: FetchCMocka.cmake  FetchMiniFB.cmake
src/cmake/: FetchCMocka.cmake
src/common/: instructions.thi  op.csv  ops.thmop  registers.csv  specs.ths
src/poc/: main.rs
src/tc/: CMakeLists.txt  Tutorial.hs  analyser.c  analyser.h  ast.c  ast.h  lexer.c  lexer.h  main.c  opts.ggo  package.yaml  parser.c  parser.h  symbol.c  symbol.h  symbol_table.c  symbol_table.h  tc.cabal
src/tc/app/: Main.hs
src/tc/examples/: fibonacci_iter.tc
src/tc/src/: Lexer.hs
src/tc/utils/: CMakeLists.txt  list.c  list_test.c  map.c  map_test.c  memory.c  pair.c  queue.c  queue_test.c  result.c  str.c
src/tc/utils/headers/: functions.h  list.h  macros.h  map.h  memory.h  pair.h  queue.h  result.h  str.h
src/tc/utils/tests/: list_test.c  map_test.c  queue_test.c  result_test.c
src/vm/: CMakeLists.txt  bus.c  bus.h  bus_test.c  clock.rs  cpu.c  cpu.h  cpu.rs  cpu_internal.h  cpu_test.c  debugger.c  debugger.h  debugger_lexer.c  debugger_lexer.h  interrupts.rs  keyboard.c  keyboard.h  main.c  main.rs  memory.c  memory.h  memory.rs  memory_map.rs  memory_test.c  ops.c  ops.h  opts.c  opts.h  pic.c  pic.h  pic_test.c  pit.c  pit.h  rest_api.rs  time.c  time.h  timer.c  timer.h  video.c  video.h  (+6 more)
src/vm-api/: lib.rs  op.csv  op.rs  opcodes.rs
src/vm/cmake/: FetchCCANJson.cmake  FetchMiniFB.cmake
src/vm/cpu/: ops.rs
src/vm/cpu/ops/: add.rs  add_ri.rs  add_rr.rs  call.rs  cmp.rs  dec.rs  halt.rs  inc.rs  j.rs  ja.rs  je.rs  jeq.rs  jmp.rs  jne.rs  jr.rs  jreq.rs  jrne.rs  load.rs  mov.rs  mov_ri.rs  mov_rr.rs  movi.rs  mul_ri.rs  mul_rr.rs  nop.rs  panic.rs  pop.rs  push.rs  ret.rs  stor.rs  sub_ri.rs  sub_rr.rs  xbm.rs
