[package]
name = "thm"
version = "0.1.0"
authors = ["Christophe Pollet"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
warp = "0.3.1"
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
serde = { version = "1.0.126", features = ["derive"] }
minifb = "0.19.3"

[lib]
name = "vmlib"
path = "src/vm-api/lib.rs"

[[bin]]
name = "thm"
path = "src/vm/main.rs"

[[bin]]
name = "tha"
path = "src/asm/main.rs"